@@ -29,7 +29,7 @@
 </addon>
 
 <addon id="plugin.video.filmibynaturex" name="Filmi BY NATURE"
-	version="2.4.5" provider-name="AJ">
+	version="2.4.6" provider-name="AJ">
 	<requires>
 		<import addon="xbmc.python" version="2.0" />
 		<import addon="script.module.simplejson" version="2.0.10" />
@@ -61,7 +61,7 @@
 </addon>
 
 <addon id="plugin.video.tvondesizonex" name="TV on DESI ZONE"
-	version="1.7.7" provider-name="AJ">
+	version="1.7.8" provider-name="AJ">
 	<requires>
 		<import addon="xbmc.python" version="2.0" />
 		<import addon="script.module.simplejson" version="2.0.10" />
@@ -85,41 +85,6 @@
 			Internet web site where from data is retrieved or otherwise relating
 			to such materials or on any sites linked to this addon. Videos are
 			soruced from video-hosting websites that are having full rights to
-			remove such access to video if required.</disclaimer>
-		<platform>all</platform>
-		<license>GNU GPL v3</license>
-	</extension>
-</addon>
-
-<addon id="plugin.video.willowtvx" name="Willow TV" version="2.2.5"
-	provider-name="AJ">
-	<requires>
-		<import addon="xbmc.python" version="2.0" />
-		<import addon="script.module.simplejson" version="2.0.10" />
-		<import addon="script.module.beautifulsoup" version="3.2.0" />
-		<import addon="script.module.turtlex" version="1.6.1"/>
-		<import addon="script.module.mechanize" version="0.2.5" />
-	</requires>
-	<extension point="xbmc.python.pluginsource" library="TurtleMain.py">
-		<provides>video</provides>
-	</extension>
-	<extension point="xbmc.addon.metadata">
-		<summary>Willow.tv: Watch LIVE VIDEO STREAMING of International
-			Cricket</summary>
-		<description>Favorite Cricket Channel in America. Buy packages at
-			www.willow.tv and enjoy live streaming on your favorite XBMC Media
-			Center.</description>
-		<disclaimer>The video add-ons hosted by my XBMC add-ons repository(aj
-			add-ons) makes no warranties, expressed or implied, and hereby
-			disclaims and negates all other warranties, including without
-			limitation, implied warranties or conditions of merchantability,
-			fitness for a particular purpose, or non-infringement of intellectual
-			property or other violation of rights. Further, video add-ons don't
-			warrant or make any representations concerning the accuracy, likely
-			results, or reliability of the use of the materials on the Internet
-			web site where from data is retrieved or otherwise relating to such
-			materials or on any sites linked to this addon. Videos are streamed
-			directly from video-hosting websites that are having full rights to
 			remove such access to video if required.</disclaimer>
 		<platform>all</platform>
 		<license>GNU GPL v3</license>
