@@ -30,6 +30,7 @@
 	<category label="Video">
 		<setting label="[B]Playback[/B]" type="lsep" />
 		<setting id="playbackqual" label="Select preferred playback video quality" type="enum" default="0" lvalues="30021|30022|30023"/>
+		<setting id="autoplayback" label="Auto playback first video source [Google Docs]" type="bool" default="true" />
 	</category>
 	<setting id="ga_time" type="text" label="GA Called" default="2000-01-01 00:00:00" visible="false"/>
     <setting id="ga_visitor" type="text" label="GA visitor" default="" visible="false"/>
