@@ -1,3 +1,6 @@
+[B]Version v1.7.8[/B]
+- Added Auto Playback settings. Default is enabled.
+
 [B]Version v1.7.7[/B]
 - Added new turtle version with DM fix.
 
